--- a/Lesson02-GitHub-Repo-Search/T02.01-Exercise-CreateLayout/app/src/main/res/layout/activity_main.xml
+++ b/Lesson02-GitHub-Repo-Search/T02.01-Exercise-CreateLayout/app/src/main/res/layout/activity_main.xml
@@ -15,11 +15,11 @@
   limitations under the License.
 -->
 
-<!--TODO (1) Change the ConstraintLayout to a LinearLayout-->
-<!--TODO (2) Make the orientation vertical-->
-<!--TODO (3) Give left, right, and top padding of 16dp-->
-<!--TODO (4) Remove the line that declares the id, we don't need it-->
-<!--TODO (5) Remove the xmlns:app declaration, we don't need that anymore-->
+<!--COMPLETED (1) Change the ConstraintLayout to a LinearLayout-->
+<!--COMPLETED (2) Make the orientation vertical-->
+<!--COMPLETED (3) Give left, right, and top padding of 16dp-->
+<!--COMPLETED (4) Remove the line that declares the id, we don't need it-->
+<!--COMPLETED (5) Remove the xmlns:app declaration, we don't need that anymore-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
@@ -30,13 +30,13 @@
     android:layout_height="match_parent"
     tools:context="com.example.android.datafrominternet.MainActivity">
 
-    <!--TODO (6) Delete this TextView-->
+    <!--COMPLETED (6) Delete this TextView-->
 
-    <!--TODO (7) Add an EditText-->
-    <!--TODO (8) Give the EditText an id of @+id/et_search_box-->
-    <!--TODO (9) Set the text size to 22sp-->
-    <!--TODO (10) Set the width to match_parent and the height to wrap_content-->
-    <!--TODO (11) Provide a hint telling the user to enter a query and then click search-->
+    <!--COMPLETED (7) Add an EditText-->
+    <!--COMPLETED (8) Give the EditText an id of @+id/et_search_box-->
+    <!--COMPLETED (9) Set the text size to 22sp-->
+    <!--COMPLETED (10) Set the width to match_parent and the height to wrap_content-->
+    <!--COMPLETED (11) Provide a hint telling the user to enter a query and then click search-->
     <EditText
         android:id="@+id/et_search_box"
         android:hint="Type a query for Github!"
@@ -44,12 +44,12 @@
         android:layout_height="wrap_content"
         android:textSize="22sp"/>
 
-    <!--TODO (12) Add a TextView-->
-    <!--TODO (13) Give the TextView an id of @+id/tv_url_display-->
-    <!--TODO (14) Set the text size to 22sp-->
-    <!--TODO (15) Set the width to wrap_content and the height to wrap_content-->
-    <!--TODO (16) Give the TextView a top margin of 8dp-->
-    <!--TODO (17) Set the text to tell the user their search URL will show up here when they click search-->
+    <!--COMPLETED (12) Add a TextView-->
+    <!--COMPLETED (13) Give the TextView an id of @+id/tv_url_display-->
+    <!--COMPLETED (14) Set the text size to 22sp-->
+    <!--COMPLETED (15) Set the width to wrap_content and the height to wrap_content-->
+    <!--COMPLETED (16) Give the TextView a top margin of 8dp-->
+    <!--COMPLETED (17) Set the text to tell the user their search URL will show up here when they click search-->
     <TextView
         android:id="@+id/tv_url_display"
         android:textSize="22sp"
@@ -58,9 +58,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <!--TODO (18) Add a ScrollView-->
-    <!--TODO (19) Set the width to match_parent and the height to wrap_content-->
-    <!--TODO (20) Set the top margin to 16dp-->
+    <!--COMPLETED (18) Add a ScrollView-->
+    <!--COMPLETED (19) Set the width to match_parent and the height to wrap_content-->
+    <!--COMPLETED (20) Set the top margin to 16dp-->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -71,10 +71,10 @@
             android:textSize="18sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-        <!--TODO (21) Within the ScrollView, add a TextView-->
-        <!--TODO (22) Give the TextView an id of @+id/tv_github_search_results_json-->
-        <!--TODO (23) Set the text size to 18sp-->
-        <!--TODO (24) Set the height and width to wrap_content-->
-        <!--TODO (25) Set the text to something that tells the user to make a search-->
+        <!--COMPLETED (21) Within the ScrollView, add a TextView-->
+        <!--COMPLETED (22) Give the TextView an id of @+id/tv_github_search_results_json-->
+        <!--COMPLETED (23) Set the text size to 18sp-->
+        <!--COMPLETED (24) Set the height and width to wrap_content-->
+        <!--COMPLETED (25) Set the text to something that tells the user to make a search-->
     </ScrollView>
 </LinearLayout>
