--- a/Lesson03-Green-Recycler-View/T03.01-Exercise-RecyclerViewLayout/app/src/main/res/layout/activity_main.xml
+++ b/Lesson03-Green-Recycler-View/T03.01-Exercise-RecyclerViewLayout/app/src/main/res/layout/activity_main.xml
@@ -19,10 +19,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!--TODO (2) Replace the TextView with a RecyclerView with an id of "@+id/rv_numbers"-->
-    <!--TODO (3) Make the width and height of the RecyclerView match_parent-->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <!--COMPLETED (2) Replace the TextView with a RecyclerView with an id of "@+id/rv_numbers"-->
+    <!--COMPLETED (3) Make the width and height of the RecyclerView match_parent-->
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_numbers"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </FrameLayout>
